# site

./: .dockerignore  .env.local  .gitignore  .gitmodules  LICENSE  README.md  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.yaml  project.env  sample.env  site-version.sh  todo  tox.ini
back/: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  project.env  pyproject.toml  tox.ini
back/.github/workflows/: python-app.yml
back/app/: config.py  database.py  hash_utils.py  logger.py  main.py  oauth2.py
back/app/admin/: __init__.py  authentication.py  superuser.py
back/app/controller/: __init__.py  mail_client.py  markdown.py  telegram_bot.py  weather.py
back/app/dependency/: __init__.py  candidate.py
back/app/model/: __init__.py  base_user.py  candidate_resume.py  question.py  superuser.py
back/app/router/: __init__.py  candidate.py  case.py  client.py  device.py  questions.py  stack.py
back/app/schema/: __init__.py  candidate.py  case.py  device.py  question.py  stack.py  test.json
back/app/templates/: email_verification.html  new_client.html  response_to_candidate.html  response_to_client.html  response_to_user.html
back/data/: questions.json
back/migrations/: env.py
back/migrations/versions/: 067daf773acc_init_db.py  3a1be7ab8d57_quiz_score_field.py  (+14 more)
back/pg-backup/: backup.sh  restore.sh
back/tasks/: __init__.py  add_new_questions.py  add_questions.py  db.py  example.py  import_json.py  shell.py  shell_init.py  superuser.py  telegram.py  update_answers.py  weather.py
back/tests/: __init__.py  conftest.py  test.env  test_data.json  utils.py
back_v2/: .gitignore  Dockerfile  docker-compose.yaml  project.env  pyproject.toml  start_server.sh  tox.ini
back_v2/app/: config.py  database.py  main.py  utils.py
back_v2/data/: questions.json
back_v2/pg-backup/: Dockerfile  Readme.md  install.sh
back_v2/tasks/: __init__.py  add_new_questions.py  add_questions.py  db.py  init_db.py  superuser.py
back_v2/tests/: conftest.py  test.env  test_data.json  utils.py
backend/: .dockerignore  .gitignore  Dockerfile  docker-compose.yaml  openapi.json  pyproject.toml  sample.env  start_server.sh  test.db  tox.ini
backend/app/: config.py  database.py  hash_utils.py  logger.py  main.py  oauth2.py  utils.py
backend/migrations/: env.py
backend/tasks/: __init__.py  db_utils.py  example.py  export_json.py  import_json.py  init_db.py  shell_init.py
backend/tests/: __init__.py  conftest.py  constants.py  database.py  db.py  test_contact_us.py  test_logo.py  test_message.py  test_post.py  test_question.py  test_user.py  test_vacancy.py  utils.py
(+601 files in other folders)
