[tool.poetry]
name = "FastAPI Server"
version = "1.2.7"
description = ""
authors = ["Nikolay <nchernov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
setuptools = "^65.4.1"
asyncpg = "^0.27.0"
fastapi = "^0.103.0"
fastapi-pagination = "^0.12.2"
sqlalchemy = "^2.0.9"
invoke = "^2.2.0"
uvicorn = "^0.21.1"
alembic = "^1.10.3"
psycopg2-binary = "^2.9.6"
bcrypt = "^4.0.1"
python-multipart = "^0.0.6"
requests = "^2.28.2"
python-jose = "^3.3.0"
passlib = "^1.7.4"
anyio = "^3.6.2"
fastapi-mail = "^1.4.0"
itsdangerous = "^2.1.2"
pytelegrambotapi = "^4.12.0"
telebot = "^0.0.5"
alchemical = "^0.7.1"
httpx = "^0.24.1"
ipython = "^8.15.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
black = "^22.10.0"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
