[tool.poetry]
name = "FastAPI Server"
version = "0.1.0"
description = ""
authors = ["Nikolay <nchernov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^0.18.0"
setuptools = "^65.4.1"
asyncpg = "^0.27.0"
pydantic = "^1.10.7"
fastapi = "^0.95.1"
fastapi-pagination = "^0.12.2"
sqlalchemy = "^2.0.9"
sqladmin = "^0.10.2"
invoke = "^2.0.0"
uvicorn = "^0.21.1"
alembic = "^1.10.3"
psycopg2-binary = "^2.9.6"
bcrypt = "^4.0.1"
python-multipart = "^0.0.6"
requests = "^2.28.2"
python-jose = "^3.3.0"
passlib = "^1.7.4"
ipython = "^8.12.0"
anyio = "^3.6.2"
fastapi-mail = "^1.2.7"
itsdangerous = "^2.1.2"
pytelegrambotapi = "^4.12.0"
telebot = "^0.0.5"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
black = "^22.10.0"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
